# claude__sql_generator

./: .gitignore  README.md
agentbasis-test-app-2/: .env.example  .gitignore  App.tsx  README.md  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
agentbasis-test-app-2/components/: Settings.tsx  SqlEditor.tsx
agentbasis-test-app-2/services/: backendService.ts
claude_backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt  run_api.sh  verify_setup.py
claude_backend/src/claude_db_agent/: __init__.py  api.py  api_models.py  claude_client.py  clerk_auth.py  neon_db.py  schema_model.py  sql_tools.py  supabase_api.py  supermemory_client.py  tools_config.py
