[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-db-agent"
version = "0.1.0"
description = "Terminal-only Python CLI that uses Claude to generate database schemas and optionally creates them in Supabase"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.scripts]
claude-db-agent = "claude_db_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
