[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-db-agent"
version = "0.1.0"
description = "FastAPI backend for Claude-powered database schema generation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.18.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sse-starlette>=1.8.0",
    "python-jose[cryptography]>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
